# ReceiptRepositoryAPI

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-06-15-112415_create_currency_store_product/: down.sql  up.sql
migrations/2024-06-15-121531_create_receipts/: down.sql  up.sql
migrations/2024-06-15-165120_create_inventories/: down.sql  up.sql
migrations/2024-08-27-164041_create_receipt_transaction_id/: down.sql  up.sql
src/: application.rs  appstate.rs  configuration.rs  error.rs  lib.rs  listener.rs  main.rs  mw_auth.rs  repository.rs  response_mapper.rs  router.rs  schema.rs  share_state.rs
src/handlers/v1/: mod.rs
src/handlers/v1/currencies/: currencies_handlers.rs  mod.rs
src/handlers/v1/inventories/: customized_inventories_handlers.rs  inventories_handlers.rs  mod.rs
src/handlers/v1/loginout/: loginout_handlers.rs  mod.rs
src/handlers/v1/products/: mod.rs  products_handlers.rs
src/handlers/v1/receipts/: mod.rs  receipts_handlers.rs
src/handlers/v1/stores/: mod.rs  stores_handlers.rs
src/models/v1/: mod.rs
src/models/v1/collections/: mod.rs  service_collection.rs
src/models/v1/commands/: mod.rs  writer_command.rs
src/models/v1/entities/: entity_currency.rs  entity_inventory.rs  entity_product.rs  entity_receipt.rs  entity_store.rs  mod.rs
src/models/v1/errors/: api_error.rs
src/models/v1/forms/: create_payload.rs  mod.rs  patch_payload.rs
src/models/v1/loginout/: login_payload.rs  mod.rs
src/models/v1/parameters/: mod.rs  pagination.rs  query_filters.rs
src/models/v1/responses/: mod.rs  response_currency.rs  response_inventory.rs  response_product.rs  response_receipt.rs  response_store.rs
src/services/v1/: mod.rs
src/services/v1/commands/: command_service.rs  mod.rs
src/services/v1/converters/: api_error_converter_service.rs  converters_service.rs  mod.rs
src/services/v1/currencies/: currencies_service.rs  mod.rs
src/services/v1/fallbacks/: fallbacks_service.rs  mod.rs
src/services/v1/inventories/: customized_inventories_service.rs  inventories_service.rs  mod.rs
src/services/v1/products/: mod.rs  products_service.rs
src/services/v1/receipts/: mod.rs  receipts_service.rs
src/services/v1/stores/: mod.rs  stores_service.rs
src/services/v1/validators/: formdata_validators_service.rs  mod.rs
