[package]
name = "receipt_repository_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["tracing"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
chrono = { version = "0.4.38", features = ["default", "serde"] }
diesel = { version = "2.2.4", features = ["postgres", "extras", "uuid"] }
dotenvy = "0.15.7"
http = "1.1.0"
serde = { version = "1.0.210", features = ["std", "serde_derive"] }
serde_with = { version = "3.9.0", features = ["std", "alloc", "chrono", "json"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["std", "v4", "fast-rng", "macro-diagnostics", "serde"] }
