[package]
name = "receipt_repository_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.8", features = ["tracing"] }
bigdecimal = { version = "0.4.6", features = ["serde"] }
chrono = { version = "0.4.38", features = ["default", "serde"] }
diesel = { version = "2.2.5", features = ["postgres", "extras", "uuid"] }
dotenvy = "0.15.7"
http = "1.1.0"
serde = { version = "1.0.215", features = ["std", "serde_derive"] }
serde_with = { version = "3.11.0", features = ["std", "alloc", "chrono", "json"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["std", "v4", "fast-rng", "macro-diagnostics", "serde"] }
