[package]
name = "receipt_repository_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["tracing"] }
axum-extra = "0.9.6"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["default", "serde"] }
diesel = { version = "2.2.6", features = ["postgres", "extras", "uuid"] }
dotenvy = "0.15.7"
http = "1.2.0"
serde = { version = "1.0.216", features = ["std", "serde_derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["std", "alloc", "chrono", "json"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["std", "v4", "fast-rng", "macro-diagnostics", "serde"] }
